# game-of-life

./: Cargo.toml  README.md
src/: main.rs  universe.rs
